--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.16.4",
     "nodemon": "^1.18.11",
     "passport": "^0.4.0",
-    "passport-facebook": "^3.0.0"
+    "passport-facebook": "^3.0.0",
+    "pg": "^7.10.0"
   },
   "devDependencies": {
     "prettier": "^1.17.0"
