--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "author": "Gary <alemmartin@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "morgan": "^1.9.1",
     "nodemon": "^1.18.11",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
