--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Gary <alemmartin@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
