--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "pg": "^7.10.0",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "prettier": "^1.17.0"
