--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "pg": "^7.10.0",
+    "pg-camelcase": "^0.0.3",
     "redis": "^2.8.0",
     "socket.io": "^2.2.0"
   },
