12-06-2019 - Waiting room without granulated permissions

--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "bcrypt": "^3.0.6",
     "bluebird": "^3.5.4",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.11",
