--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^3.0.6",
     "bluebird": "^3.5.4",
     "body-parser": "^1.19.0",
+    "connect-pg-simple": "^5.0.0",
     "cookie-parser": "^1.4.4",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
