--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
+    "express-socket.io-session": "^1.3.5",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.11",
