--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "express-socket.io-session": "^1.3.5",
+    "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.11",
