--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.11",
+    "opentok": "^2.9.0",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "pg": "^7.10.0",
