Implement email sender

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,9 @@ SESSION_SECRET=Plw4:#SqGH-prBXt:JY5zGjsX|g{jz|x;buYfi_7PkO[DM%8Am-5BZEujJ1,{vB
 
 TOKBOX_API_KEY=1209410
 TOKBOX_API_SECRET=20019banvsb180edffdf528fd74ab611ebc1993e
+
+EMAIL_HOST=smtp.mailgun.org
+EMAIL_AUTH_USER=postmaster@sandbox7b94dbeea14446c4b429a0327526de6a.mailgun.org
+EMAIL_AUTH_PASS=e08a96c11dbe22e495555254549290ab-bbbc8336-0775ad93
+EMAIL_PORT=587
+EMAIL_SECURE=false
