--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.3.0",
     "nodemon": "^1.18.11",
     "opentok": "^2.9.0",
     "passport": "^0.4.0",
