--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,6 @@ EMAIL_AUTH_USER=postmaster@sandbox7b94dbeea14446c4b429a0327526de6a.mailgun.org
 EMAIL_AUTH_PASS=e08a96c11dbe22e495555254549290ab-bbbc8336-0775ad93
 EMAIL_PORT=587
 EMAIL_SECURE=false
+
+ONESIGNAL_APP_ID=13169e90-ea9d-4ac6-8435-8801e4bc803a
+ONESIGNAL_REST_API_KEY=MDI5MzVjYWQtYmNhMy00ZDI0LTk4MTEtMDNhZDYxODkyYTI3
