--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-socket.io-session": "^1.3.5",
     "express-validator": "^6.2.0",
     "jsonwebtoken": "^8.5.1",
+    "mercadopago": "^1.2.0",
     "morgan": "^1.9.1",
     "nodemailer": "^6.3.0",
     "nodemon": "^1.18.11",
