Implement mercadopago productive

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,5 @@ EMAIL_SECURE=false
 
 ONESIGNAL_APP_ID=13169e90-ea9d-4ac6-8435-8801e4bc803a
 ONESIGNAL_REST_API_KEY=MDI5MzVjYWQtYmNhMy00ZDI0LTk4MTEtMDNhZDYxODkyYTI3
+
+MERCADOPAGO_SANDBOX=TRUE
