Store mercadopago auth code

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,13 @@ ONESIGNAL_APP_ID=13169e90-ea9d-4ac6-8435-8801e4bc803a
 ONESIGNAL_REST_API_KEY=MDI5MzVjYWQtYmNhMy00ZDI0LTk4MTEtMDNhZDYxODkyYTI3
 
 MERCADOPAGO_SANDBOX=TRUE
+
+MERCADOPAGO_MARKETPLACE_APP_ID='6354387827079567'
+MERCADOPAGO_MARKETPLACE_CLIENT_ID='6354387827079567'
+MERCADOPAGO_MARKETPLACE_CLIENT_SECRET='c4EKNfvnZi5VzqdlPTzgIvjb3COS9HMH'
+
+MERCADOPAGO_MARKETPLACE_SANDBOX_PUBLIC_KEY='TEST-2739125c-4342-453c-8511-e51034ef3841'
+MERCADOPAGO_MARKETPLACE_SANDBOX_ACCESS_TOKEN='TEST-6354387827079567-100609-706a7122b906ee345044afd72dd2cc4d__LD_LB__-74996189'
+
+MERCADOPAGO_MARKETPLACE_PRODUCTIVE_PUBLIC_KEY='APP_USR-8a79ed0d-3490-4e80-aeaa-b027e4bed633'
+MERCADOPAGO_MARKETPLACE_PRODUCTIVE_ACCESS_TOKEN='APP_USR-6354387827079567-100609-8d2775168e41f28376061d43f6062706__LD_LA__-74996189'
