--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.19.0",
     "connect-pg-simple": "^6.0.1",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
